[package]
name = "paradome"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
rustyline = "9.1.2"

[dev-dependencies]
cargo-husky = "1"
